--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,17 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageButton
-        android:id="@+id/imbtnPicture"
-        android:layout_width="44dp"
-        android:layout_height="49dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="9dp"
-        android:contentDescription="@string/takePhoto"
-        app:srcCompat="@mipmap/camera_icon" />
-
     <LinearLayout
         android:id="@+id/MainContent"
         android:layout_width="match_parent"
@@ -44,32 +33,12 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
+            android:hint="@string/description"
+            android:importantForAutofill="no"
             android:inputType="textPersonName"
             tools:text="@string/description" />
 
     </LinearLayout>
-
-    <ImageButton
-        android:id="@+id/imBtnAccount"
-        android:layout_width="45dp"
-        android:layout_height="52dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="23dp"
-        android:layout_marginBottom="13dp"
-        android:contentDescription="@string/logout"
-        app:srcCompat="@mipmap/user_icon" />
-
-    <ImageButton
-        android:id="@+id/imBtnPost"
-        android:layout_width="49dp"
-        android:layout_height="47dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="114dp"
-        android:layout_marginBottom="12dp"
-        android:layout_toStartOf="@+id/imBtnAccount"
-        android:contentDescription="@string/submit"
-        app:srcCompat="@mipmap/post_icon" />
 
     <ImageView
         android:id="@+id/ivLogo"
@@ -77,10 +46,11 @@
         android:layout_height="55dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="126dp"
-        android:layout_toEndOf="@+id/imbtnPicture"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="96dp"
+        android:layout_toEndOf="@+id/ivCamera"
         android:contentDescription="@string/instagram_logo"
         app:srcCompat="@drawable/nav_logo_whiteout" />
 
@@ -88,7 +58,7 @@
         android:id="@+id/tvUserName"
         android:layout_width="114dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imbtnPicture"
+        android:layout_below="@+id/ivCamera"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="16dp"
@@ -96,5 +66,51 @@
         android:layout_marginEnd="281dp"
         android:textSize="18sp"
         tools:text="@string/userName" />
+
+    <ImageView
+        android:id="@+id/ivHome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="28dp"
+        android:layout_marginBottom="1dp"
+        android:contentDescription="@string/home_button"
+        app:srcCompat="@mipmap/home_icon" />
+
+    <ImageView
+        android:id="@+id/ivPost"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="109dp"
+        android:layout_marginEnd="109dp"
+        android:layout_marginBottom="1dp"
+        android:layout_toStartOf="@+id/ivAccount"
+        android:layout_toEndOf="@+id/ivHome"
+        android:contentDescription="@string/submit"
+        app:srcCompat="@mipmap/post_icon" />
+
+    <ImageView
+        android:id="@+id/ivAccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="1dp"
+        android:contentDescription="@string/logout"
+        app:srcCompat="@mipmap/user_icon" />
+
+    <ImageView
+        android:id="@+id/ivCamera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="10dp"
+        android:contentDescription="@string/takePhoto"
+        app:srcCompat="@mipmap/camera_icon" />
 
 </RelativeLayout>
