--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#1C80F4</color>
-    <color name="green">#43BC2D</color>
+    <color name="green">#348526</color>
 
 </resources>
