--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,108 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/MainContent"
+
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvUserName"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:orientation="vertical"
-        tools:context=".MainActivity">
-
-
-        <ImageView
-            android:id="@+id/ivPostImage"
-            android:layout_width="match_parent"
-            android:layout_height="400dp"
-            android:layout_weight="1"
-            android:contentDescription="@string/samplePhoto"
-            tools:srcCompat="@tools:sample/avatars" />
-
-        <EditText
-            android:id="@+id/etDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="@string/description"
-            android:importantForAutofill="no"
-            android:inputType="textPersonName"
-            tools:text="@string/description" />
-
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/ivLogo"
-        android:layout_width="205dp"
-        android:layout_height="55dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="96dp"
-        android:layout_toEndOf="@+id/ivCamera"
-        android:contentDescription="@string/instagram_logo"
-        app:srcCompat="@drawable/nav_logo_whiteout" />
-
-    <TextView
-        android:id="@+id/tvUserName"
-        android:layout_width="114dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/ivCamera"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="281dp"
-        android:textSize="18sp"
-        tools:text="@string/userName" />
-
-    <ImageView
-        android:id="@+id/ivHome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="28dp"
-        android:layout_marginBottom="1dp"
-        android:contentDescription="@string/home_button"
-        app:srcCompat="@mipmap/home_icon" />
-
-    <ImageView
-        android:id="@+id/ivPost"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="1dp"
-        android:contentDescription="@string/submit"
-        app:srcCompat="@mipmap/post_icon" />
-
-    <ImageView
-        android:id="@+id/ivAccount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="1dp"
-        android:contentDescription="@string/logout"
-        app:srcCompat="@mipmap/user_icon" />
-
-    <ImageView
-        android:id="@+id/ivCamera"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="10dp"
-        android:contentDescription="@string/takePhoto"
-        app:srcCompat="@mipmap/camera_icon" />
+        app:menu="@menu/menu_bottom_navigation" />
 
 </RelativeLayout>
