--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -6,13 +6,34 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
+    android:layout_marginStart="6dp"
+    >
 
     <TextView
         android:id="@+id/tvUserName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="194dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         tools:text="@string/userName" />
+
+    <ImageView
+        android:id="@+id/ivDotIcon"
+        android:layout_width="25dp"
+        android:layout_height="27dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="5dp"
+        android:contentDescription="@string/sample_icon"
+        app:srcCompat="@drawable/ic_ufi_more__1_" />
+
+</RelativeLayout>
+
+
 
     <ImageView
         android:id="@+id/ivImage"
@@ -22,9 +43,58 @@
         android:scaleType="centerCrop"
         tools:srcCompat="@tools:sample/avatars" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginStart="6dp"
+        >
+
+        <ImageView
+            android:id="@+id/ivArrow"
+            android:layout_width="25dp"
+            android:layout_height="27dp"
+            android:contentDescription="@string/arrow_sample_image"
+            app:srcCompat="@drawable/ic_ufi_new_direct" />
+
+        <ImageView
+            android:id="@+id/ivHeart"
+            android:layout_width="25dp"
+            android:layout_height="27dp"
+            android:layout_marginStart="5dp"
+            android:layout_toEndOf="@+id/ivArrow"
+            android:contentDescription="@string/heart_same_image"
+            app:srcCompat="@drawable/ic_ufi_heart" />
+
+        <ImageView
+            android:id="@+id/ivComment"
+            android:layout_width="25dp"
+            android:layout_height="27dp"
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@+id/ivHeart"
+            android:contentDescription="@string/comment_image_sample"
+            app:srcCompat="@drawable/ic_ufi_comment" />
+
+        <ImageView
+            android:id="@+id/ivBookMark"
+            android:layout_width="25dp"
+            android:layout_height="27dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="6dp"
+            android:contentDescription="@string/bookmark"
+            app:srcCompat="@drawable/ic_ufi_save_active" />
+
+
+    </RelativeLayout>
+
     <TextView
         android:id="@+id/tvDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginStart="6dp"
+        android:textColor="@color/black"
         tools:text="@string/description" />
 </LinearLayout>
