--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -5,21 +5,16 @@
     <item
         android:id="@+id/action_home"
         android:icon="@drawable/ic_instagram_home_filled_24"
-        android:title="Home"
-        app:showAsAction="always" />
+        android:title="@string/home"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_compose"
         android:icon="@drawable/ic_instagram_new_post_filled_24"
-        android:title="Compose"
+        android:title="@string/compose"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_profile"
         android:icon="@drawable/ic_instagram_user_filled_24"
-        android:title="Profile"
-        app:showAsAction="always" />
-    <item
-        android:id="@+id/action_camera"
-        android:icon="@android:drawable/ic_menu_camera"
-        android:title="Camera"
+        android:title="@string/profile"
         app:showAsAction="always" />
 </menu>
